Bug 90713 - : list of figures has wrong format after update
Summary: : list of figures has wrong format after update
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.4.2.2 release
Hardware: All All
: high major
Assignee: Andras Timar
URL:
Whiteboard: target:5.1.0 target:5.0.0.0.beta4
Keywords: regression
Depends on:
Blocks:
 
Reported: 2015-04-19 15:33 UTC by steinixx
Modified: 2016-10-25 19:24 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
shows a figure including a description with corresponding footnote that badly is also visible in list of figures (46.80 KB, image/png)
2015-04-19 15:33 UTC, steinixx
Details
illustration and caption with footnote generatres wrong illustration index (17.34 KB, application/vnd.oasis.opendocument.text)
2015-04-21 17:55 UTC, steinixx
Details
illustration with missing caption (47.23 KB, image/png)
2015-09-05 15:28 UTC, steinixx
Details
illustration with visible caption (okay) (44.14 KB, image/png)
2015-09-05 15:29 UTC, steinixx
Details

Note You need to log in before you can comment on or make changes to this bug.
Description steinixx 2015-04-19 15:33:15 UTC
Created attachment 114910 [details]
shows a figure including a description with corresponding footnote that badly is also visible in list of figures

OS: Ubunutu 14.04 oder Windows 7 LO: Version: 4.4.2.2 Build-ID: 40m0(Build:2)

Content of automatically created list of figures was okay until above mentioned version (on a second computer i use LO 4.2.7.2. and it is working). 

The problem with the 4.4.2.2. is, that also foodnotes are taken into account and therefore the number of the footnote is visible in the list of figures. 

Example of a good looking one in LO 4.2.7.2.
Tabellenverzeichnis 
Figure 1: test description..................1


Example of a wrong list of figures in LO 4.4.2.2.
Tabellenverzeichnis 
Figure 1: test description.1..................1


To reproduce the problem:
1) insert a figure(picture) and add an description

2) because of it is not possible to add a footnote to the description, using a  workaround and copy figure description and insert it below the figure

3) then add the footnote to the figure description

3) create the list of figures (menu insert/dictionary/dictionary/list of figures

See also the attached screen shot
Comment 1 raal 2015-04-21 17:13:50 UTC
Hello,

Thank you for reporting the bug. Please attach a sample document, as this makes it easier for us to verify the bug. 
(Please note that the attachment will be public, remove any sensitive information before attaching it. 
See https://wiki.documentfoundation.org/QA/FAQ#How_can_I_eliminate_confidential_data_from_a_sample_document.3F for help on how to do so.)
Comment 2 steinixx 2015-04-21 17:55:01 UTC
Created attachment 114992 [details]
illustration and caption with footnote generatres wrong illustration index
Comment 3 Buovjaga 2015-04-25 13:34:27 UTC
Repro from scratch with 5.0.
Not reproduced with 4.2 -> regression.

Win 7 Pro 64-bit Version: 5.0.0.0.alpha1+ (x64)
Build ID: f3375fa07f27bd2ade519af3c07d69040d10eaa9
TinderBox: Win-x86_64@42, Branch:master, Time: 2015-04-22_23:38:50
Locale: fi_FI

Ubuntu 15.04 64-bit 
Version: 4.2.7.2
Build ID: 933c0aa564ec4f8883ed5732c866db48dca4dac5
Comment 4 Commit Notification 2015-06-11 20:04:12 UTC
Andras Timar committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f20c03acac4774bc99cc8f33271f12aa2a290788

tdf#90713 tdf#90925 remove footnote mark from TOC/List of Figures entry

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2015-06-11 20:31:59 UTC
Andras Timar committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5498f7f5d11250a8425920c71fcb4e2069dc283a&h=libreoffice-5-0

tdf#90713 tdf#90925 remove footnote mark from TOC/List of Figures entry

It will be available in 5.0.0.0.beta4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 steinixx 2015-09-05 15:28:32 UTC
Created attachment 118434 [details]
illustration with missing caption
Comment 7 steinixx 2015-09-05 15:29:45 UTC
Created attachment 118435 [details]
illustration with  visible caption (okay)
Comment 8 steinixx 2015-09-05 15:31:13 UTC
Comment on attachment 118434 [details]
illustration with missing caption

Tested with version 5.0.1.2 and creation of of index is working now. 

But after opening an existing document with about 30 illustrations the captions of the illustrations are not visible - or let's say often not visible for some illustrations. Switching to print-preview makes the caption visible for some illustrations but hides caption for some other illustrations. The behavior can be reproduced here within my document (about 80 pages), but actually i can  not reproduce the behavior with a new document.

Therefore i attached some screenshots to document and visualize the wrong behavior.

1) start LO and load document (about 80 pages, 24 illustrations)
2) goto first illustration
3) there is no caption visible (screenshot_example1)
4) switch to print-preview ( strg+shift+O )
5) during preview caption illustriations number 1 until number 18 are visible
6) during preview caption illustrations number 19 until 24 are NOT visible
7) after finished preview, caption is visible ONLY for illustration number 1 (screenshot_example2)
Comment 9 Andras Timar 2015-09-05 15:35:47 UTC
@steinixx: Please file a new bug for the new problem. One bug -- one problem, this is the rule.