tdf#90713 tdf#90925 remove footnote mark from TOC/List of Figures entry

Change-Id: I58ab0fbc6a247c29c77a4e9d7febc11daa4a79c8
Reviewed-on: https://gerrit.libreoffice.org/16233
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Andras Timar <andras.timar@collabora.com>
(cherry picked from commit f20c03acac4774bc99cc8f33271f12aa2a290788)